# CLIque-chat-app

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: client.rs  main.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs  server.rs
src/: main.rs  protocol.rs  server.rs
