[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
protocol = { path = "../protocol" }

argon2 = "0.6.0-rc.0"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.0", features = ["full"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
